# tickets

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.githooks/: pre-commit
conf/: config.yaml
conf/data/: local.yaml  minio.yaml
conf/features/: baselin.yaml
conf/onlinedb/: duck.yaml
conf/xgboost/: defaults.yaml
docker/: docker-compose.yaml
k8s/: minio-deployment.yaml  minio-service.yaml  mlflow-deployment.yaml  mlflow-pvc.yaml  mlflow-service.yaml  redis-statefulset.yaml  secret.yaml
scripts/: find_enums.py
src/tickets/: main.py
src/tickets/conf/: config.yaml
src/tickets/conf/data/: aws.yaml  minio.yaml
src/tickets/conf/dnn/: defaults.yaml
src/tickets/conf/logging/: defaults.yaml
src/tickets/conf/mlflow/: defaults.yaml
src/tickets/conf/tfidf/: defaults.yaml
src/tickets/conf/xgboost/: cuda.yaml  defaults.yaml
src/tickets/data/: analyze.py  check.py  ingest.py  runner.py
src/tickets/mlmodels/: base.py  dataset.py  dl_model.py  dnn_trainer.py  evaluate.py  models.py  preprocessing.py  runner.py  transformer.py  xgb_trainer.py  xgboost_model.py
src/tickets/schemas/: config.py  data_quality.py  events.py  metrics.py  tasks.py  ticket.py
src/tickets/utils/: config.py  config_util.py  io.py  io_util.py  log_util.py  logger.py
tests/data/: test_analyze.py  test_ingest.py
