[project]
name = "tickets"
version = "0.1.0"
description = "an intelligent ticket support system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.45",
    "fastapi>=0.118.0",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "mlflow>=3.4.0",
    "numpy>=2.3.3",
    "omegaconf>=2.3.0",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "prefect>=3.4.22",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.9",
    "rank-bm25>=0.2.2",
    "redis[hiredis,json]>=6.4.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "uvicorn[standard]>=0.37.0",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
    "pandas-stubs>=2.3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tickets*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = [
    "D",
]

[tool.ruff.lint.isort]
known-first-party = ["tickets"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
